--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ PGiK-Survivors/Assembly-CSharp.csproj
 PGiK-Survivors/Library/
 PGiK-Survivors/Logs/
 PGiK-Survivors/PGiK-Survivors.sln
+PGiK-Survivors/Temp/
