--- a/PGiK-Survivors/Assembly-CSharp-Editor.csproj
+++ b/PGiK-Survivors/Assembly-CSharp-Editor.csproj
@@ -60,8 +60,7 @@
     <Analyzer Include="D:\Programy\Unity\2022.3.50f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Plugins\Unity-SerializableDictionary-master\Assets\SerializableDictionary\Editor\SerializableDictionaryPropertyDrawer.cs" />
-    <Compile Include="Assets\Scripts\Plugins\Unity-SerializableDictionary-master\Assets\Editor\DebugUtilsEditor.cs" />
+    <Compile Include="Assets\Editor\EditorScripts.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -1202,9 +1201,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
+      <Project>{AB4A2CE6-AE8E-4FE5-3F97-3677D6B5E5F5}</Project>
+      <Name>Assembly-CSharp-firstpass</Name>
+    </ProjectReference>
     <ProjectReference Include="Assembly-CSharp.csproj">
       <Project>{EC732451-0260-020F-4AE6-6823AB9A171E}</Project>
       <Name>Assembly-CSharp</Name>
+    </ProjectReference>
+    <ProjectReference Include="Assembly-CSharp-Editor-firstpass.csproj">
+      <Project>{23BC60B7-70FE-BE7C-8728-5E61DA9B13FF}</Project>
+      <Name>Assembly-CSharp-Editor-firstpass</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
